[lessons 1,2] Removed hardcoded TOC

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -25,49 +25,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_36F3C828\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Python Basics</span>\n",
-    "<a name=\"beginToc\"></a>\n",
-    "## Table of Contents\n",
-    "[Python Basics](#T_36F3C828)\n",
+    "# Python Basics\n",
     "\n",
-    "&emsp;[Introduction](#H_221F9604)\n",
-    "\n",
-    "&emsp;[MATLAB scripts](#H_CC3F55EF)\n",
-    "\n",
-    "&emsp;[Defining real numbers](#H_6AAE4A8C)\n",
-    "\n",
-    "&emsp;[Basic operations with real numbers](#H_1715DA2F)\n",
-    "\n",
-    "&emsp;&emsp;[Sum](#H_F8D0F1E0)\n",
-    "\n",
-    "&emsp;&emsp;[Subtraction](#H_2998A281)\n",
-    "\n",
-    "&emsp;&emsp;[Multiplication](#H_BC234F99)\n",
-    "\n",
-    "&emsp;&emsp;[Division](#H_C82901BB)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Exponentiation](#H_4B48E0F1)\n",
-    "\n",
-    "&emsp;[Trigonometric operations with real numbers](#H_765559ED)\n",
-    "\n",
-    "&emsp;&emsp;[Cosine](#H_CCFAA037)\n",
-    "\n",
-    "&emsp;&emsp;[Sine](#H_BEB0CE4E)\n",
-    "\n",
-    "&emsp;&emsp;[Tangent](#H_24035A9E)\n",
-    "\n",
-    "&emsp;[Exponential and logarithm](#H_EED5BCFF)\n",
-    "\n",
-    "&emsp;&emsp;[Exponential](#H_75E1C5A4)\n",
-    "\n",
-    "&emsp;&emsp;[Natural logarithm](#H_BC849EBD)\n",
-    "\n",
-    "[Homework](#T_FCCB39BE)\n",
-    "\n",
-    "<a name=\"endToc\"></a>\n",
-    "<a name=\"H_7AC3DD0F\"></a>\n",
-    "<a name=\"H_221F9604\"></a>\n",
     "## Introduction\n",
     "\n",
     "Before we begin learning DQ Robotics, it is important to understand some basics of Python programming.\n",
