--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,60 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_D05B1C6B\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Quaternion Basics using DQ Robotics</span>\n",
-    "<a name=\"beginToc\"></a>\n",
-    "## Table of Contents\n",
-    "[Quaternion Basics using DQ Robotics](#T_D05B1C6B)\n",
     "\n",
-    "&emsp;[Introduction](#H_CE335F4C)\n",
+    "# Quaternion Basics using DQ Robotics\n",
     "\n",
-    "&emsp;[Quick review on complex numbers](#H_7DF2A060)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Sum/Subtraction](#H_03DC8E14)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Product](#H_42FA8EEB)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Norm](#H_EFB74034)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Real](#H_79B4805D)\n",
-    "\n",
-    "&emsp;&emsp;[Operations on quaternions](#H_582FD121)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Sum/Subtraction](#H_02F5F344)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Real part](#H_94462E57)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Imaginary part](#H_8ACC88AF)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Conjugation](#H_2242E6F0)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Vec3](#H_E2D9BC8C)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Vec4](#H_75053EE9)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Hamilton Operators](#H_271E2BFF)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Conjugate mapping matrix](#H_BA5B2E63)\n",
-    "\n",
-    "&emsp;[Unit quaternions and the rotation of rigid bodies](#H_CC4D2A23)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Unit quaternion double-cover property](#H_35D1DED6)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[No rotation](#H_C67278B0)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Plotting quaternions](#H_FC487DD7)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Sequential rotations](#H_C909BC72)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Reverse rotation](#H_625A2B4B)\n",
-    "\n",
-    "[Homework](#T_98D69E51)\n",
-    "\n",
-    "[Bonus Homework](#T_B6A9D8F3)\n",
-    "\n",
-    "<a name=\"endToc\"></a>\n",
-    "<a name=\"H_CE335F4C\"></a>\n",
     "## Introduction\n",
     "\n",
     "Before going into the topic of quaternions, it is important to review some high-school level math. And, of course, we need to install the library!\n",
@@ -87,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c1 = 5 + 28i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import essential DQ algebra\n",
     "from dqrobotics import *\n",
@@ -155,20 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 1"
-      ]
-     },
-     "execution_count": 236,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imaginary unit property\n",
     "i_*i_"
@@ -184,17 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DQ Robotics j_ is not equal to Python's j\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -222,17 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c1 = 5 + 28i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c1 = 5  + 28*i_\n",
     "print(f\"c1 = {c1}\")"
@@ -240,17 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c2 = 25 + 88i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c2 = 25 + 88*i_\n",
     "print(f\"c2 = {c2}\")"
@@ -268,17 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c3 = 30 + 116i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c3 = c1+c2\n",
     "print(f\"c3 = {c3}\")"
@@ -297,20 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 20 - 60i"
-      ]
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c1-c2"
    ]
@@ -330,20 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 2339 + 1140i"
-      ]
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c1*c2"
    ]
@@ -363,20 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5 - 28i"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conj(c1)"
    ]
@@ -396,20 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28.442925"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm(c1)"
    ]
@@ -429,20 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28i"
-      ]
-     },
-     "execution_count": 245,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Im(c1)"
    ]
@@ -462,20 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Re(c1)"
    ]
@@ -510,17 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c1 = 5 + 28i + 86j + 99k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define c1\n",
     "c1 = 5 + 28*i_ + 86*j_ + 99*k_\n",
@@ -537,80 +361,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 1"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "i_*i_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 1"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "j_*j_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 1"
-      ]
-     },
-     "execution_count": 250,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_*k_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 1"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "i_*j_*k_"
    ]
@@ -627,17 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h1 = 5 + 28i + 86j + 99k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1 = 5 + 28*i_ + 86*j_ + 99*k_\n",
     "print(f\"h1 = {h1}\")"
@@ -645,17 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h2 = 5 + 28i + 86j + 99k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h2 = -2 + 25*k_\n",
     "print(f\"h2 = {h1}\")"
@@ -673,40 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3 + 28i + 86j + 124k"
-      ]
-     },
-     "execution_count": 254,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1+h2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7 + 28i + 86j + 74k"
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1-h2"
    ]
@@ -723,20 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 2485 + 2094i - 872j - 73k"
-      ]
-     },
-     "execution_count": 256,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1*h2"
    ]
@@ -754,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,17 +503,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h1*h2 is not equal to h2*h1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if h3==h4:\n",
     "    print('h1*h2 is equal to h2*h1')\n",
@@ -805,20 +528,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Re(h1)"
    ]
@@ -838,20 +550,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28i + 86j + 99k"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Im(h1)"
    ]
@@ -868,20 +569,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5 - 28i - 86j - 99k"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conj(h1)"
    ]
@@ -899,20 +589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "134.186437"
-      ]
-     },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm(h1)"
    ]
@@ -932,20 +611,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([28., 86., 99.])"
-      ]
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec3(h1)"
    ]
@@ -965,20 +633,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 5., 28., 86., 99.])"
-      ]
-     },
-     "execution_count": 265,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec4(h1)"
    ]
@@ -998,66 +655,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-2485.,  2094.,  -872.,   -73.])"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec4(h1*h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  -10.,    -0.,    -0., -2475.],\n",
-       "       [  -56.,     0.,    -0.,  2150.],\n",
-       "       [ -172.,     0.,     0.,  -700.],\n",
-       "       [ -198.,    -0.,     0.,   125.]])"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hamiplus4(h1)*vec4(h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  -10.,    -0.,    -0., -2475.],\n",
-       "       [    0.,   -56.,  2150.,    -0.],\n",
-       "       [    0.,  -700.,  -172.,     0.],\n",
-       "       [  125.,     0.,    -0.,  -198.]])"
-      ]
-     },
-     "execution_count": 268,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "haminus4(h2)*vec4(h1)"
    ]
@@ -1102,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,20 +739,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm(r1)"
    ]
@@ -1161,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,16 +831,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2297775572.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[274], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    clear all;\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#disp('Displaying 1 as a quaternion')"
    ]
