[lesson4] Modified to python but with some <u> tags and plot to fix.

--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,23 @@
     "\n",
     "Before introducing dual quaternions, it is common practice to introduce the concept of dual numbers. Let us start with that.\n",
     "\n",
-    "As always, let us make the essential imports.\n"
+    "As always, let us make the essential installations and imports.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%pip install dqrobotics\n",
+    "%pip install dqrobotics --break-system-packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d1 =  - 10 + E*(239)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d1 = 10 - 239*E_\n",
     "print(f\"d1 = {d1}\")"
@@ -97,40 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "E*(1)"
-      ]
-     },
-     "execution_count": 209,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "E_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "E_*E_"
    ]
@@ -155,17 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d1 =  - 10 + E*(239)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d1 = 10 - 239*E_\n",
     "print(f\"d1 = {d1}\")"
@@ -173,17 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d2 = 55 + E*(32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d2 = 55 + 32*E_\n",
     "print(f\"d2 = {d2}\")"
@@ -201,40 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45 + E*(271)"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d1+d2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 65 + E*(207)"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d1-d2"
    ]
@@ -254,20 +197,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 550 + E*(12825)"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d1*d2"
    ]
@@ -287,20 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 10"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "P(d1)"
    ]
@@ -320,20 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "239"
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "D(d1)"
    ]
@@ -366,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h1 = 5 + 6i + 7j + 8k + E*(9 + 15i + 7j + 8k)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1 = 5 + 6*i_ + 7*j_ + 8*k_ + E_*(9 + 15*i_ + 7*j_ + 8*k_)\n",
     "print(f\"h1 = {h1}\")"
@@ -394,17 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h1 = 5 + 6i + 7j + 8k + E*(9 + 15i + 7j + 8k)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1 = 5 + 6*i_ + 7*j_ + 8*k_ + E_*(9 + 15*i_ + 7*j_ + 8*k_)\n",
     "print(f\"h1 = {h1}\")"
@@ -412,17 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h2 =  - 25 + 1k + E*(7j + 8k)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h2 = -25 + 1*k_ + E_*( 7*j_ + 8*k_)\n",
     "print(f\"h2 = {h2}\")"
@@ -440,40 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 20 + 6i + 7j + 9k + E*(9 + 15i + 14j + 16k)"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1+h2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30 + 6i + 7j + 7k + E*(9 + 15i)"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1-h2"
    ]
@@ -490,20 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " - 133 - 143i - 181j - 195k + E*( - 346 - 368i - 203j - 109k)"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h1*h2"
    ]
@@ -521,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,17 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h1*h2 is not equal to h2*h1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if h3==h4:\n",
     "    print('h1*h2 is equal to h2*h1')\n",
@@ -572,20 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5 - 6i - 7j - 8k + E*(9 - 15i - 7j - 8k)"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conj(h1)"
    ]
@@ -603,20 +437,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13.190906 + E*(18.800831)"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm(h1)"
    ]
@@ -633,20 +456,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5 + E*(9)"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Re(h1)"
    ]
@@ -666,20 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6i + 7j + 8k + E*(15i + 7j + 8k)"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Im(h1)"
    ]
@@ -699,20 +500,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5 + 6i + 7j + 8k"
-      ]
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "P(h1)"
    ]
@@ -729,20 +519,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9 + 15i + 7j + 8k"
-      ]
-     },
-     "execution_count": 232,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "D(h1)"
    ]
@@ -762,20 +541,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.,  7.,  8., 15.,  7.,  8.])"
-      ]
-     },
-     "execution_count": 233,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec6(h1)"
    ]
@@ -795,20 +563,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 5.,  6.,  7.,  8.,  9., 15.,  7.,  8.])"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec8(h1)"
    ]
@@ -828,74 +585,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-133., -143., -181., -195., -346., -368., -203., -109.])"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec8(h1*h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-125.,   -0.,   -0.,   -8.,    0.,    0.,    0.,    0.],\n",
-       "       [-150.,    0.,   -0.,    7.,    0.,    0.,    0.,    0.],\n",
-       "       [-175.,    0.,    0.,   -6.,    0.,    0.,    0.,    0.],\n",
-       "       [-200.,   -0.,    0.,    5.,    0.,    0.,    0.,    0.],\n",
-       "       [-225.,   -0.,   -0.,   -8.,    0.,   -0.,  -49.,  -64.],\n",
-       "       [-375.,    0.,   -0.,    7.,    0.,    0.,  -56.,   56.],\n",
-       "       [-175.,    0.,    0.,  -15.,    0.,    0.,   35.,  -48.],\n",
-       "       [-200.,   -0.,    0.,    9.,    0.,   -0.,   42.,   40.]])"
-      ]
-     },
-     "execution_count": 236,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hamiplus8(h1)*vec8(h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-125.,   -0.,   -0.,   -8.,    0.,    0.,    0.,    0.],\n",
-       "       [   0., -150.,    7.,   -0.,    0.,    0.,    0.,    0.],\n",
-       "       [   0.,   -6., -175.,    0.,    0.,    0.,    0.,    0.],\n",
-       "       [   5.,    0.,   -0., -200.,    0.,    0.,    0.,    0.],\n",
-       "       [   0.,   -0.,  -49.,  -64., -225.,   -0.,   -0.,   -8.],\n",
-       "       [   0.,    0.,   56.,  -56.,    0., -375.,    7.,   -0.],\n",
-       "       [  35.,  -48.,    0.,    0.,    0.,  -15., -175.,    0.],\n",
-       "       [  40.,   42.,   -0.,    0.,    9.,    0.,   -0., -200.]])"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "haminus8(h2)*vec8(h1)"
    ]
@@ -937,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,20 +704,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm(x1)"
    ]
@@ -1042,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,24 +782,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sequential pose transformations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Sequential pose transformations')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,40 +844,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.995185 + 0.098017k + E*(0.049009 + 0.995185i - 0.098017j - 0.497592k)"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x3*conj(x3)"
    ]
@@ -1203,20 +872,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.995185 + 0.098017k"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rotation(x3)"
    ]
@@ -1233,20 +891,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2i - 1k"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "translation(x3)"
    ]
@@ -1264,19 +911,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'include_namespace_dq' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[250], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## Homework example\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Essential imports\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43minclude_namespace_dq\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m## Solutions\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Question 1\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Question 2\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Question 3\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'include_namespace_dq' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Homework example\n",
     "# Essential imports\n",
